# simpleo

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
certs.example/: edgedb.crt  edgedb.key
dbschema/: auth.esdl  default.esdl  news.esdl
dbschema/migrations/: 00001.edgeql
simpleo/: app.py
simpleo/auth/: dependencies.py  endpoints.py  schemas.py  security.py
simpleo/auth/table_data_gateways/: user.py
simpleo/core/: config.py  router.py  schemas.py  utils.py
simpleo/core/connections/: __init__.py  edgedb.py  redis.py  table_data_gateways.py
simpleo/news/: endpoints.py  schemas.py
simpleo/news/table_data_gateways/: __init__.py  news.py
